# counter-cli

./: Cargo.toml  README.md
src/: basic_counters.rs  cli.rs  lib.rs  loading_bar.rs  main.rs
