[package]
name = "counter-cli"
version = "0.5.4"
edition = "2021"
description = "A simple cli for counting- anything."
license = "GPL-3.0-or-later"
authors = ["kalscium <kalscium@protonmail.com>"]
repository = "https://github.com/kalscium/counter-cli"
keywords = [ "cli", "counter" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
clap = { version = "4.4.11", features = ["derive"] }
